--- a/templates/index.html
+++ b/templates/index.html
@@ -43,22 +43,12 @@
     <main>
       <h2>Últimos <span>doadores</span></h2>
       <section class="donors">
+        {% for doner in doners %}
           <div class="donor">
-            <div class="blood">AB+</div>
-            <p>Ismael Ventura</p>
+            <div class="blood">{{doner.blood}}</div>
+            <p>{{doner.name}}</p>
           </div>
-          <div class="donor">
-            <div class="blood">B+</div>
-            <p>Django Brown</p>
-          </div>
-          <div class="donor">
-            <div class="blood">A+</div>
-            <p>Mano Brown</p>
-          </div>
-          <div class="donor">
-            <div class="blood">O+</div>
-            <p>Ismailov</p>
-          </div>
+        {% endfor %}
       </section>
     </main>
 
