Deixando campos do fomulário como obrigatório, e limpando os campos após a requisição.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,16 +25,19 @@
           type="text"
           name="name"
           placeholder="Nome Completo"
+          required
         >
         <input
           type="text"
           name="email"
           placeholder="Email"
+          required
         >
         <input
           type="text"
           name="blood"
           placeholder="Tipo sanguíneo"
+          required
         >
         <button>Quero ajudar</button>
       </form>
